assets/css/main.css
/*! HTML5 Boilerplate v7.3.0 | MIT License | https://html5boilerplate.com/ */


/* main.css 2.0.0 | MIT License | https://github.com/h5bp/main.css#readme */


/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */


/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
    color: #222 !important;
    font-size: 1em !important;
    line-height: 1.4 !important;
    scroll-padding-top: 100px !important; /* height of sticky header */
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}


/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}


/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}


/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}


/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}


/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ==========================================================================
   Author's custom styles
   ========================================================================== */


/* ==========================================================================
   Helper classes
   ========================================================================== */


/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}


/*
* Hide only visually, but have it available for screen readers:
* https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
*
* 1. For long content, line feeds are not interpreted as spaces and small width
*    causes content to wrap 1 word per line:
*    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
*/

.sr-only {
    border: 0;
    clip: rect(0, 0, 0, 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    white-space: nowrap;
    width: 1px;
    /* 1 */
}


/*
* Extends the .sr-only class to allow the element
* to be focusable when navigated to via the keyboard:
* https://www.drupal.org/node/897638
*/

.sr-only.focusable:active,
.sr-only.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    white-space: inherit;
    width: auto;
}


/*
* Hide visually and from screen readers, but maintain layout
*/

.invisible {
    visibility: hidden;
}


/*
* Clearfix: contain floats
*
* For modern browsers
* 1. The space content is one way to avoid an Opera bug when the
*    `contenteditable` attribute is included anywhere else in the document.
*    Otherwise it causes space to appear at the top and bottom of elements
*    that receive the `clearfix` class.
* 2. The use of `table` rather than `block` is only necessary if using
*    `:before` to contain the top-margins of child elements.
*/

.clearfix:before,
.clearfix:after {
    content: " ";
    /* 1 */
    display: table;
    /* 2 */
}

.clearfix:after {
    clear: both;
}


/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
(-webkit-min-device-pixel-ratio: 1.25),
(min-resolution: 1.25dppx),
(min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}


/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   https://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important;
        /* Black prints faster */
        box-shadow: none !important;
        text-shadow: none !important;
    }
    a,
    a:visited {
        text-decoration: underline;
    }
    a[href]:after {
        content: " (" attr(href) ")";
    }
    abbr[title]:after {
        content: " (" attr(title) ")";
    }
    /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */
    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }
    pre {
        white-space: pre-wrap !important;
    }
    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }
    /*
     * Printing Tables:
     * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
     */
    thead {
        display: table-header-group;
    }
    tr,
    img {
        page-break-inside: avoid;
    }
    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }
    h2,
    h3 {
        page-break-after: avoid;
    }
}


/*
 * OHA - Site Styles
 */

body {
    font-family: 'Source sans pro' !important;
    margin-bottom: 60px !important;
    width: 100% !important;
    height: 100% !important;
    position: relative !important;
    scroll-padding-top: 100px;
}

.font-ssp-reg {
    font-family: 'Source sans pro';
    font-weight: regular;
}

.font-ssp-light {
    font-family: 'Source sans pro';
    font-weight: light;
}

.font-ssp-semibold {
    font-family: 'Source sans pro';
    font-weight: semi-bold;
}

.font-ssp-bold {
    font-family: 'Source sans pro';
    font-weight: bold;
}

.font-5x {
    font-size: 5em;
}

/* Background Call out */
.bg-callout {
    padding: 1.25rem;
    margin-top: 1.25rem;
    margin-bottom: 1.25rem;
    border: 1px solid #eee;
    border-left-width: .25rem;
    border-radius: .25rem;
}

.bg-callout-info {
    border-left-color: #17a2b8;
}

.bg-callout-primary {
    border-left-color: #007bff;
}

.bg-callout-secondary {
    border-left-color: #6c757d;
}

.bg-callout-success {
    border-left-color: #28a745;
}

.bg-callout-danger {
    border-left-color: #dc3545;
}

.bg-callout-warning {
    border-left-color: #ffc107;
}

.bg-callout-red {
    border-left-color: #ba0c2f;
}

.bg-callout-blue {
    border-left-color: #002a6c;
}

.bg-callout-midblue {
    border-left-color: #0067b9;
}

.bg-callout-lightblue {
    border-left-color: #a7c6ed;
}

.bg-callout-darkgray {
    border-left-color: #6c6463;
}

.bg-callout-lightblue {
    border-left-color: #808080;
}

.bg-callout-lightblue {
    border-left-color: #cfcdc9;
}

/* Lengths */

.w-1x {
    width: 100px;
}

#main-content,
.content {
    padding-top: 80px !important;
    padding-bottom: 100px !important;
    margin-bottom: 100px !important;
    min-height: 100% !important;
    height: auto !important;
}

a#logo {
    font-size: 1.5rem;
}

.nav-item {
    font-size: 1.2rem;
}

.jumbotron {
    width: 100%;
    height: 100vh;
}

.v-pos-25 {
    margin-top: 25%;
}

.jumbotron-image {
    background-image: url("/assets/img/g4578.png");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
}

.text-shadow {
    text-shadow: 2px 2px 5px #ffffff;
}

.round-section {
    text-align: center;
    vertical-align: middle;
    height: 150px;
    width: 100%;
    line-height: 150px;
    background-color: #007bff40;
    border-radius: 50%;
    display: inline-block;
}

.footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 100px;
    /* line-height: 100px; */
    background-color: #F5F5F5;
}

img.thumbnail,
.post-thumbnail>img {
    width: 100%;
    height: 200px;
    object-fit: cover;
}

/* .post p>img {
    width: 80%;
} */

.navbar-nav a.nav-link {
    color: rgba(255,255,255, .9) !important;
}

a.nav-link.dropdown-item {
    color: #212529 !important;
}

a.badge {
    color: #ffffff;
}

li {
    list-style: none;
}

.post-sidemenu ul {
    margin-left: 0;
    font-size: .9em;
    background-color: #ccc;
}
.post-sidemenu a:hover {
    text-decoration: none;
}

div#styleguide-section {
    position: sticky;
    top: 100px;
    height: 100%;
}

#style-guide-submenu {
    position: sticky !important;
    top: 100px;
    height: 100%;
}

#style-guide-submenu a.list-group-item {
    padding: .5rem;
    font-weight: bold;
}

.style-guide-subgroup a {
    padding-left: 1rem !important;
}

/* nav.list-group > div.list-group {
  display: none;
  margin-bottom: 0;
}

.list-group-item:focus + div.list-group {
  display: block;
} */

#style-guide-details {
    position: relative;
    /* height: 1000px;
    overflow-y: scroll; */
}

/* font weights */
.font-ssp-reg,
.font-ssp-light,
.font-ssp-semibold,
.font-ssp-bold {
    font-family: "Souce Sans Pro";
}

.font-ssp-reg {
    font-weight: regular !important;
}

.font-ssp-light {
    font-weight: light !important;
}

.font-ssp-semibold {
    font-weight: semibold !important;
}

.font-ssp-bold {
    font-weight: bold !important;
}

div.font-ssp {
    display: table-row;
}

div.font-ssp > div.col-10 {
    display: table-cell;
    vertical-align: middle;
}

/* Pagination */
.pagination a, .pagination span {
    padding: 7px 18px;
    border: 1px solid #eee;
    margin-left: -2px;
    margin-right: -2px;
    background-color: #ffffff;
    display: inline-block;
  }

.pagination a {
    &:hover {
        background-color: #f1f1f1;
        color: #333;
    }
 }

 .pagination span {
    font-weight: bold;
 }

.pagination {
    text-align: center;
 }

 /* Images */
 .tool-icons {

 }

 /* Bookdown Styles - Overwrite */
.book.font-family-1 {
    font-family: 'Source sans pro' !important;
    
}

.book {
    position: inherit !important;
}

.book .book-summary {
    position: absolute !important;
    top: 110px !important; /* 60 + 50 */
}

.book .book-header.fixed,
.book .with-summary .book-header.fixed {
    position: fixed !important;
    top: 60px !important;
    left: 0 !important;
}

book .book-body, .book .book-body .body-inner {
    position: fixed !important;
    top: 110px !important;
    overflow-y: hidden !important;
}

